--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         
         <li class="home">
-          <a target="_blank"  href="https://github.com/jaestrada97">My Github</a>
+          <a target="_blank"  href="https://github.com/JAEstrada97/website">My Github</a>
         </li>
         <li>
           <a href="https://cns.csusb.edu/cse">CSUSB</a>
