--- a/pages/lotr.html
+++ b/pages/lotr.html
@@ -34,7 +34,7 @@
       </div>
     
     <div class="centered plot">
-        <span id="actors"></span>
+      <span>Actors: </span><span id="actors"></span>
       </div>
 
     <div class="poster-image">
